[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Monsters/Snake.tscn" type="PackedScene" id=3]
[ext_resource path="res://Door/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/FadeOut.tscn" type="PackedScene" id=5]
[ext_resource path="res://Piece/Piece.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/LevelTempEnding.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/Apple.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/LevelTemp.gd" type="Script" id=16]
[ext_resource path="res://Assets/Fonts/MedievalSharp-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Assets/Tiles/stone_stairs_down.png" type="Texture" id=18]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/6.jpg" type="Texture" id=19]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/5.jpg" type="Texture" id=20]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/1.jpg" type="Texture" id=21]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/4.jpg" type="Texture" id=22]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/8.jpg" type="Texture" id=23]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/0.jpg" type="Texture" id=24]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/2.jpg" type="Texture" id=25]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/3.jpg" type="Texture" id=26]
[ext_resource path="res://Assets/Pieces/sarah level 1/_resized/7.jpg" type="Texture" id=27]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 1
outline_color = Color( 0.0313726, 0.027451, 0.027451, 1 )
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 24 )

[node name="LevelTemp" type="Node2D"]
script = ExtResource( 16 )
next_scene = ExtResource( 7 )

[node name="floor-and-walls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 0
occluder_light_mask = 31
format = 1
tile_data = PoolIntArray( 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 1, 0, 131105, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 1, 0, 262153, 1, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 0, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 0, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 1, 0, 524290, 1, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 1, 0, 589826, 1, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 1, 0, 655362, 1, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 1, 0, 655386, 1, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 1, 0, 720898, 1, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 1, 0, 720922, 1, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 1, 0, 786434, 1, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 1, 0, 786458, 1, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 1, 0, 786466, 1, 0, 851970, 1, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 1, 0, 851994, 1, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 1, 0, 917506, 1, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 1, 0, 917530, 1, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 1, 0, 983042, 1, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 1, 0, 983066, 1, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 1, 0, 983075, 1, 0, 983076, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 1, 0, 983081, 1, 0, 983082, 1, 0, 1048578, 1, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 1, 0, 1048602, 1, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114138, 1, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 1, 0, 1179674, 1, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179687, 0, 0, 1179688, 0, 0, 1179689, 0, 0, 1179690, 1, 0, 1245210, 1, 0, 1245211, 1, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 1, 0, 1310747, 1, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310761, 1, 0, 1310762, 1, 0, 1376283, 1, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376297, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441829, 0, 0, 1441830, 1, 0, 1441831, 1, 0, 1441832, 1, 0, 1441833, 1, 0, 1507355, 1, 0, 1507356, 1, 0, 1507357, 1, 0, 1507358, 1, 0, 1507359, 0, 0, 1507360, 1, 0, 1507361, 1, 0, 1507362, 1, 0, 1507363, 1, 0, 1507364, 1, 0, 1507365, 1, 0, 1507366, 1, 0, 1507367, 1, 0, 1572891, 1, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0, 1572902, 0, 0, 1572903, 1, 0, 1638427, 1, 0, 1638428, 0, 0, 1638429, 0, 0, 1638430, 0, 0, 1638431, 0, 0, 1638432, 0, 0, 1638433, 0, 0, 1638434, 0, 0, 1638435, 0, 0, 1638436, 0, 0, 1638437, 0, 0, 1638438, 0, 0, 1638439, 1, 0, 1638440, 1, 0, 1703963, 1, 0, 1703964, 0, 0, 1703965, 0, 0, 1703966, 0, 0, 1703967, 0, 0, 1703968, 0, 0, 1703969, 0, 0, 1703970, 0, 0, 1703971, 0, 0, 1703972, 0, 0, 1703973, 0, 0, 1703974, 0, 0, 1703975, 1, 0, 1703976, 1, 0, 1769499, 1, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769510, 0, 0, 1769511, 1, 0, 1769512, 1, 0, 1835035, 1, 0, 1835036, 0, 0, 1835037, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1835041, 0, 0, 1835042, 0, 0, 1835043, 0, 0, 1835044, 0, 0, 1835045, 0, 0, 1835046, 0, 0, 1835047, 1, 0, 1835048, 1, 0, 1900571, 1, 0, 1900572, 0, 0, 1900573, 0, 0, 1900574, 0, 0, 1900575, 0, 0, 1900576, 0, 0, 1900577, 0, 0, 1900578, 0, 0, 1900579, 0, 0, 1900580, 0, 0, 1900581, 0, 0, 1900582, 0, 0, 1900583, 1, 0, 1966107, 1, 0, 1966108, 1, 0, 1966109, 1, 0, 1966110, 1, 0, 1966111, 1, 0, 1966112, 1, 0, 1966113, 1, 0, 1966114, 1, 0, 1966115, 1, 0, 1966116, 1, 0, 1966117, 1, 0, 1966118, 1, 0, 1966119, 1, 0 )

[node name="on-top" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 15
format = 1
tile_data = PoolIntArray( 327709, 2, 0, 1245219, 2, 0 )

[node name="Monsters" type="Node2D" parent="."]

[node name="Snake" parent="Monsters" instance=ExtResource( 3 )]
position = Vector2( 624, 176 )
v = Vector2( 0, 1 )

[node name="Snake2" parent="Monsters" instance=ExtResource( 3 )]
position = Vector2( 944, 368 )

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( 336, 240 )

[node name="Door2" parent="Doors" instance=ExtResource( 4 )]
position = Vector2( 1008, 752 )

[node name="Bullets" type="Node2D" parent="."]

[node name="pieces" type="Node2D" parent="."]

[node name="Piece1" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 312, 368 )
id = "1"
asset = ExtResource( 24 )

[node name="Piece2" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 400, 176 )
id = "2"
asset = ExtResource( 21 )

[node name="Piece3" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 784, 176 )
id = "3"
asset = ExtResource( 25 )

[node name="Piece4" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 880, 272 )
id = "4"
asset = ExtResource( 26 )

[node name="Piece5" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 1040, 272 )
id = "5"
asset = ExtResource( 22 )

[node name="Piece6" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 944, 520 )
id = "6"
asset = ExtResource( 20 )

[node name="Piece7" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 1296, 592 )
id = "7"
asset = ExtResource( 19 )

[node name="Piece8" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 1024, 664 )
id = "8"
asset = ExtResource( 27 )

[node name="Piece9" parent="pieces" instance=ExtResource( 6 )]
position = Vector2( 1192, 720 )
id = "9"
asset = ExtResource( 23 )

[node name="Apples" type="Node2D" parent="."]

[node name="Apple" parent="Apples" instance=ExtResource( 8 )]
position = Vector2( 1040, 112 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="p1" type="TextureRect" parent="UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p2" type="TextureRect" parent="UI"]
visible = false
margin_left = 64.0
margin_right = 104.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p3" type="TextureRect" parent="UI"]
visible = false
margin_left = 128.0
margin_right = 168.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p4" type="TextureRect" parent="UI"]
visible = false
margin_top = 64.0
margin_right = 40.0
margin_bottom = 104.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p5" type="TextureRect" parent="UI"]
visible = false
margin_left = 64.0
margin_top = 64.0
margin_right = 104.0
margin_bottom = 104.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p6" type="TextureRect" parent="UI"]
visible = false
margin_left = 128.0
margin_top = 64.0
margin_right = 168.0
margin_bottom = 104.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p7" type="TextureRect" parent="UI"]
visible = false
margin_top = 128.0
margin_right = 40.0
margin_bottom = 168.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p8" type="TextureRect" parent="UI"]
visible = false
margin_left = 64.0
margin_top = 128.0
margin_right = 104.0
margin_bottom = 168.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="p9" type="TextureRect" parent="UI"]
visible = false
margin_left = 128.0
margin_top = 128.0
margin_right = 168.0
margin_bottom = 168.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="collected" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 201.059
margin_right = 151.0
margin_bottom = 215.059
custom_fonts/font = SubResource( 1 )
text = "Collected Pieces: 0/9"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next-level-hint" type="Label" parent="UI"]
visible = false
margin_left = 16.0
margin_top = 224.0
margin_right = 197.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 2 )
text = "you can now go to the door of next level"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="warn" type="Label" parent="UI"]
visible = false
margin_left = 520.0
margin_top = 584.0
margin_right = 812.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 3 )
text = "Come back here after collecting all the pieces"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelDoor" type="Area2D" parent="."]
position = Vector2( 1136, 880 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NextLevelDoor"]
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelDoor"]
shape = SubResource( 4 )

[node name="FadeOut" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, 336 )
[connection signal="body_entered" from="NextLevelDoor" to="." method="_on_NextLevelDoor_body_entered"]
[connection signal="body_exited" from="NextLevelDoor" to="." method="_on_NextLevelDoor_body_exited"]
[connection signal="piece" from="Player" to="." method="_on_Player_piece"]
